hphp/hack/test/typecheck/pipe_assign.php.exp
File "pipe_assign.php", line 5, characters 3-4:
Cannot assign a value to the special pipe variable ($$) (Typing[4176])
